Lesson 3 final commit

--- a/index.html
+++ b/index.html
@@ -79,55 +79,55 @@
 
         <!-- First Featurette -->
         <div class="featurette" id="topic1">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
+            <img class="An arrow pointing to a dropbox" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bf/Wikiversity-Mooc-Icon-Download.svg/500px-Wikiversity-Mooc-Icon-Download.svg.png">
             <h2 class="featurette-heading">Highlight #1
-                <span class="text-muted">Topic 1 Header</span>
+                <span class="text-muted">Version Control</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Version Control is a way of having multiple copies of a project throughout the working phase that the user may go back to at any time. With this, if the user decided they wanted to work on a new version of the project, but still have the older version, they would have both options. There are three types of Version Control Systems or VCS: local, centralized, and distributed. Local VCS is the file the user can save on the computer, and only that computer has access to it. The Centralized VCS can be used by multiple computers, and stores files within a general server. This is a great method for doing shared work with team members. Lastly, the Distributed VCS, similar to the Centralized VCS, can be used to work from multiple computers by mirroring the repository onto computer with access to the server. This is important because it allows us to work on the same content while in different locations. This is relevant to this course because we will be using Github, which is a remote repository. </p>
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Second Featurette -->
         <div class="featurette" id="topic2">
-            <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
+            <img class="http://www.itsmycodeblog.com/images/git.png" src="http://www.itsmycodeblog.com/images/git.png">
             <h2 class="featurette-heading">Highlight #2
-                <span class="text-muted">Topic 2 Header</span>
+                <span class="text-muted">History of Git</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Git was established from the flames of a broken bond. An open source software named Linux kernel used to partner with a Distributed VCS named BitKeeper. When the relationship went south, Linux had to come up with its own form of a VCS. Luckily, since they were using BitKeeper for long, they were able to create their own. This is what we know as Git. This is important because it is a fast, efficient way to work on large projects. We need to use systems like Git to work on projects in class.</p>
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Third Featurette -->
         <div class="featurette" id="topic3">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
+            <img class="A git system unlabelled chart" src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fd/Git_commits_trees_blobs.svg/500px-Git_commits_trees_blobs.svg.png">
             <h2 class="featurette-heading">Highlight #3
-                <span class="text-muted">Topic 3 Header</span>
+                <span class="text-muted">Git Basics</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Git is similar to a mini file system in a way that it takes snapshots of previous work and stores it as a reference. This is different from VCS that saves the whole edited version of a file. Git mostly reads local files. This means if the user needed from their local computer, Git can find it easily. The best part about Git is that the data only increases. There are three stages of a Git: the working directory, staging area, and repository. Git is important because we will be able to access, and add data without the fear of anything being deleted. </p>
         </div>
         
         <hr class="featurette-divider">
         
        <!-- Fourth Featurette -->
         <div class="featurette" id="topic4">
-            <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
+            <img class="A folder with the git symbol on it" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/Antu_folder-git.svg/500px-Antu_folder-git.svg.png">
             <h2 class="featurette-heading">Highlight #4
-                <span class="text-muted">Topic 4 Header</span>
+                <span class="text-muted">Getting a Git Repository</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Initializing a repository is different depending on the system the user is using. For Mac, the user would type in “$ cd /Users/user/your_repository” into the terminal, then type “$ git init” (this creates a subdirectory of the name “.git”). There are many different functions that the user may use to manipulate the Git. The “$ git add .” command adds all the files to the Git. Then to commit the files, the “$ git commit –m” command is used with a descriptions in quotations. This is important because we will be using these commands in class to add and commit these files into our Github accounts.</p>
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Fifth Featurette -->
         <div class="featurette" id="topic5">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
+            <img class="A cartoon computer with the terminal open" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/Utilities-terminal.svg/500px-Utilities-terminal.svg.png">
             <h2 class="featurette-heading">Highlight #5
-                <span class="text-muted">Topic 5 Header</span>
+                <span class="text-muted">Recording Changes to the Repository</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">There are many different commands that may be used in the terminal to manipulate files. Some of the most common ones are “git status,” “.gitignore,” and  “git diff.” The “git status” command checks the status of a file after it is modified. The “.gitignore” command allows the user to ignore files. Lastly, the “git diff” command allows the user see the lines that were added or removed. These commands are important because they will be used when working with Github. We will use them when editing files and it is a great safety net if, God forbid, anything happens to one of our files. </p>
         </div>
 
         <hr class="featurette-divider">
